# ArucoLandingROSContainer

./: ros.dependencies.txt
docker/: docker-compose.yml  ros.Dockerfile  sdk.Dockerfile
ros/src/advanced/ArucoLanding/: CMakeLists.txt  README.md  package.xml
ros/src/advanced/ArucoLanding/src/: aruco_pose_estimator.cpp  aruco_pose_estimator.hpp  landing_controller.cpp  landing_controller.hpp  landing_planner.cpp  landing_planner.hpp  main.cpp
ros/src/advanced/circle_example/: README.md
ros/src/advanced/circle_example/src/: circle_references.cpp
ros/src/advanced/common/include/common/: drone_state.hpp
ros/src/advanced/common/src/: drone_state.cpp
ros/src/advanced/remote_controller_example/src/: remote_controller_references.cpp
ros/src/getting_started/frame_convention/: CMakeLists.txt  README.md  package.xml
ros/src/getting_started/frame_convention/src/: main.cpp
ros/src/getting_started/hello_world/: README.md
ros/src/getting_started/system_monitor/: README.md
sdk/advanced/circle_example/src/: circle_references.cpp
sdk/advanced/remote_controller_example/src/: remote_controller_references.cpp
sdk/getting_started/: CMakeLists.txt
sdk/getting_started/frame_convention/: CMakeLists.txt  README.md
sdk/getting_started/frame_convention/src/: main.cpp
