<?xml version="1.0"?>
<package format="3">
  <name>aruco_landing</name>
  <version>0.1.0</version>
  <description>ArUco Marker-based autonomous landing</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Run dependencies are the same as build dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>creos_sdk_msgs</exec_depend>
  <exec_depend>advanced_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

